fix: db properties aligned

--- a/argus-build.properties
+++ b/argus-build.properties
@@ -4,6 +4,8 @@ build.property.persistence.driver=com.mysql.jdbc.Driver
 build.property.persistence.url=jdbc:mysql://localhost:3306/argus_tables
 build.property.persistence.user=root
 build.property.persistence.password=root
+build.property.persistence.ddl-generation=create-tables
+#build.property.persistence.ddl-generation=drop-and-create-tables
 build.property.persistence.loglevel=CONFIG
 build.property.secure.cookies=false
 system.property.admin.email=argus-admin@mycompany.com
