--- a/pom.xml
+++ b/pom.xml
@@ -383,6 +383,38 @@
                 </plugins>
             </build>
         </profile>
+		<profile>
+			<id>local-tomcat</id>
+			<activation><activeByDefault>false</activeByDefault></activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.tomcat.maven</groupId>
+						<artifactId>tomcat7-maven-plugin</artifactId>
+						<version>2.1</version>
+						<configuration>
+							<systemProperties>
+								<argus.config.private.location>
+									${top}/argus.properties
+								</argus.config.private.location>
+							</systemProperties>
+						</configuration>
+						<executions>
+							<execution>
+								<id>tomcat-run</id>
+								<goals>
+									<goal>exec-war-only</goal>
+								</goals>
+								<phase>package</phase>
+								<configuration>
+									<path>/argusws</path>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
     </profiles>
     <modules>
         <module>ArgusCore</module>
