--- a/argus-build.properties
+++ b/argus-build.properties
@@ -1,32 +1,19 @@
 # Default settings for unit and integration tests.
-#<<<<<<< HEAD
-##build.property.persistence.unit=<provider>org.eclipse.persistence.jpa.PersistenceProvider</provider>\n<exclude-unlisted-classes>false</exclude-unlisted-classes>\n    <properties>\n      <property name="javax.persistence.schema-generation.database.action" value="drop-and-create-tables"/>\n      <property name="javax.persistence.jdbc.driver" value="org.apache.derby.jdbc.EmbeddedDriver"/>\n      <property name="javax.persistence.jdbc.url" value="jdbc:derby:memory:argus;create=true"/>\n      <property name="javax.persistence.jdbc.user" value="root"/>\n      <property name="javax.persistence.jdbc.password" value="root"/>\n      <property name="eclipselink.ddl-generation" value="drop-and-create-tables"/>\n      <property name="eclipselink.logging.level" value="SEVERE"/>\n      <property name="eclipselink.logging.parameters" value="true"/>\n      <property name="eclipselink.target-database" value="DERBY"/>\n      <property name="eclipselink.canonicalmodel.subpackage" value="unit"/>\n    </properties>
-#build.property.persistence.driver=com.mysql.jdbc.Driver
-#build.property.persistence.url=jdbc:mysql://localhost:3306/argus_tables
-#build.property.persistence.user=root
-#build.property.persistence.password=root
-#build.property.persistence.ddl-generation=create-tables
-##build.property.persistence.ddl-generation=drop-and-create-tables
-#build.property.persistence.loglevel=CONFIG
-#=======
 build.property.persistence.unit=\
 <provider>org.eclipse.persistence.jpa.PersistenceProvider</provider>\n\
 <exclude-unlisted-classes>false</exclude-unlisted-classes>\n\
 <properties>\n\
-  <property name="javax.persistence.schema-generation.database.action" value="drop-and-create-tables"/>\n\
-  <property name="javax.persistence.jdbc.driver" value="org.apache.derby.jdbc.EmbeddedDriver"/>\n\
-  <property name="javax.persistence.jdbc.url" value="jdbc:derby:memory:argus;create=true"/>\n\
-  <property name="javax.persistence.jdbc.user" value="root"/>\n\
-  <property name="javax.persistence.jdbc.password" value="root"/>\n\
-  <property name="eclipselink.ddl-generation" value="drop-and-create-tables"/>\n\
-  <property name="eclipselink.logging.level" value="SEVERE"/>\n\
+  <property name="javax.persistence.schema-generation.database.action" value="create-tables"/>\n\
+  <property name="javax.persistence.jdbc.driver" value="org.postgresql.Driver"/>\n\
+  <property name="javax.persistence.jdbc.url" value="jdbc:postgresql://postgres:5432/argus_user"/>\n\
+  <property name="javax.persistence.jdbc.user" value="argus_user"/>\n\
+  <property name="javax.persistence.jdbc.password" value="password"/>\n\
+  <property name="eclipselink.ddl-generation" value="create-tables"/>\n\
+  <property name="eclipselink.logging.level" value="CONFIG"/>\n\
   <property name="eclipselink.logging.parameters" value="true"/>\n\
-  <property name="eclipselink.target-database" value="DERBY"/>\n\
+  <property name="eclipselink.target-database" value="Auto"/>\n\
   <property name="eclipselink.canonicalmodel.subpackage" value="unit"/>\n\
 </properties>
-
-
-#>>>>>>> upstream/kiwigrid-develop
 build.property.secure.cookies=false
 system.property.admin.email=argus-admin@mycompany.com
 system.property.log.level=ERROR
