--- a/ArgusDocker/persistent/docker-compose.yml
+++ b/ArgusDocker/persistent/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     volumes:
       - ./storage/opentsdb/data/hbase:/data/hbase
       - ./storage/opentsdb/tmp:/tmp
+      - ./conf/opentsdb/start_opentsdb.sh:/opt/bin/start_opentsdb.sh
+      - ./conf/opentsdb/opentsdb.conf:/opt/opentsdb/config/opentsdb.conf
   postgres:
     image: postgres:9.6.1
     hostname: postgres
@@ -50,6 +52,7 @@ services:
     volumes:
       - ./conf/argus.properties:/usr/argus/argus.properties:ro
       - ./conf/argus-web-services/web.xml:/usr/local/tomcat/conf/web.xml:ro
+      - ./conf/argus-web-services/tomcat-users.xml:/usr/local/tomcat/conf/tomcat-users.xml:ro
     environment:
       - "CATALINA_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005 -Dargus.config.public.location=/usr/argus/argus.properties"
   argus-web:
