--- a/ArgusWebServices/src/main/docker/Dockerfile
+++ b/ArgusWebServices/src/main/docker/Dockerfile
@@ -1,6 +1,6 @@
-FROM tomcat:7.0.73-jre8-alpine
+FROM tomcat:8.5-jre8
 
-RUN apk add -q --update vim bash
+#RUN apk add -q --update vim bash
 
 ARG WAR
 COPY ${WAR} /usr/local/tomcat/webapps/argus.war
