added CORS filter initialization

--- a/ArgusDocker/persistent/conf/argus-web-services/web.xml
+++ b/ArgusDocker/persistent/conf/argus-web-services/web.xml
@@ -537,6 +537,14 @@
 		<filter-name>CorsFilter</filter-name>
 		<filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
 		<async-supported>true</async-supported>
+		<init-param>
+			<param-name>cors.allowed.methods</param-name>
+			<param-value>GET,POST,HEAD,OPTIONS,PUT,DELETE</param-value>
+		</init-param>
+		<init-param>
+			<param-name>cors.allowed.headers</param-name>
+			<param-value>Content-Type,X-Requested-With,accept,Origin,Access-Control-Request-Method,Access-Control-Request-Headers</param-value>
+		</init-param>
 	</filter>
 
 
